--- a/Game-CLE/docs/css/style.css
+++ b/Game-CLE/docs/css/style.css
@@ -1,5 +1,12 @@
 body {
     margin: 0px; padding: 0px;
+    background-image:url("../images/background.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    font-family: 'Press Start 2P', cursive;
+    color:white;
+    font-size:22px;
+    overflow:hidden;
 }
 
 game * {
@@ -10,13 +17,49 @@ game * {
 game {
     width: 800px;
     height: 600px;
-    border: 2px solid Yellow;
+    /* border: 2px solid Yellow; */
+}
+
+score{
+    margin:15px;
+}
+
+.title{
+    position: relative;
+    margin-bottom:200px;
+    font-size:55px!important;
+    text-align: center!important;
 }
 
 ball {
     width: 100px;
     height: 100px;
     border-radius: 25px;
-    background-color: Red;
+    background-image: url(../images/player.png); 
+    background-size: 100px 100px;
+}
+objecten{
+    width: 100px;
+    height: 100px;
+    transform: rotate(45deg);
+    border-radius: 25px;
+    background-size: 100px 100px;
+    background-image: url(../images/plane.png);
+}
+powerups{
+    width: 50px;
+    height: 38px;
+    background-size: 50px 38px;
+    background-image: url(../images/fireball.png);
+}
+test{
+    width: 100%;
+    height: 25%;
+    position: fixed; /* or absolute */
+    top: 40%;
+    padding-top:20px;
+    font-size:60px;
+    text-align:center;
+    background-color:rgba(0, 0, 0, 0.473);;
     
 }
