--- a/Game-CLE/docs/css/style.css
+++ b/Game-CLE/docs/css/style.css
@@ -1,7 +1,5 @@
 body {
     margin: 0px; padding: 0px;
-    background-image:url("../images/background.png");
-    background-size: 100%;
     background-repeat: no-repeat;
     font-family: 'Press Start 2P', cursive;
     color:white;
@@ -23,6 +21,10 @@ game {
 score{
     margin:15px;
 }
+button{
+    font-size:20px;
+    margin-top:60px;
+}
 
 .title{
     position: relative;
@@ -38,10 +40,11 @@ ball {
     background-image: url(../images/player.png); 
     background-size: 100px 100px;
 }
-objecten{
+plane{
     width: 100px;
     height: 100px;
     transform: rotate(45deg);
+    margin:10px;
     border-radius: 25px;
     background-size: 100px 100px;
     background-image: url(../images/plane.png);
@@ -62,4 +65,22 @@ test{
     text-align:center;
     background-color:rgba(0, 0, 0, 0.473);;
     
+}
+final_score{
+    width: 100%;
+    height: 25%;
+    position: fixed; /* or absolute */
+    top: 50%;
+    padding-top:20px;
+    font-size:40px;
+    text-align:center;
+    
+}
+
+#background { 
+    background-image:url("../images/background.png");
+    background-repeat: repeat;
+    background-size:cover;
+    width: 100%;
+    height:100%;
 }
