--- a/Game-CLE/docs/css/style.css
+++ b/Game-CLE/docs/css/style.css
@@ -24,27 +24,54 @@ score{
     z-index:9999;
 }
 #playagainbutton{
-    position: fixed; /* or absolute */
-    top: 60%;
+    position: relative; /* or absolute */
     font-size:18px;
     text-align:center;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    padding:10px;
+    background-color:transparent;
+    border:3px solid white;
+    color:white;
+    text-align:center;
+    z-index:9999;
+    cursor:pointer;
     display:none;
-    z-index:99999;
 }
 #scoreopslaanbutton{
-    position: fixed; /* or absolute */
-    top: 64%;
+    position: relative; /* or absolute */
     font-size:18px;
     text-align:center;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    padding:10px;
+    background-color:transparent;
+    border:3px solid white;
+    color:white;
+    text-align:center;
+    z-index:9999;
+    cursor:pointer;
     display:none;
-    z-index:99999;
 }
+#overzicht{
+  position: relative; /* or absolute */
+  font-size:18px;
+  text-align:center;
+  padding:10px;
+  background-color:transparent;
+  border:3px solid white;
+  color:white;
+  text-align:center;
+  z-index:9999;
+  cursor:pointer;
+  display:none;
+}
+
+#buttons{
+  position: fixed; /* or absolute */
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)!important;
+  z-index:9999;
+}
+
 
 .title{
     position: relative;
@@ -91,7 +118,7 @@ final_score{
     width: 100%;
     height: 25%;
     position: fixed; /* or absolute */
-    top: 48%;
+    top: 47%;
     padding-top:20px;
     font-size:40px;
     text-align:center;
@@ -124,7 +151,7 @@ font-size:30px;
 #group 			  { 
     width:300px;
     position: fixed; /* or absolute */
-    top: 56%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)!important;
@@ -137,6 +164,7 @@ font-size:30px;
     padding:10px 10px 10px 5px;
     display:block;
     width:300px;
+    height:45px;
     border:none;
     border-bottom:1px solid #757575;
   }
@@ -186,11 +214,11 @@ font-size:30px;
 
   #save{
     position: fixed; /* or absolute */
-    top: 63.3%;
+    top: 61.3%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)!important;
-    width:315px;
+    width:300px;
     padding:10px 10px 10px 5px;
     background-color:transparent;
     border:3px solid white;
@@ -200,5 +228,18 @@ font-size:30px;
     cursor:pointer;
     display:none;
     font-size:15px;
+  }
+
+  #div2{
+    position: fixed; /* or absolute */
+    top: 54%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)!important;
+    z-index:9999;
+  }
+
+  #back-arrow{
+    display:none;
   }
 
