--- a/Game-CLE/docs/css/style.css
+++ b/Game-CLE/docs/css/style.css
@@ -20,7 +20,7 @@ game {
 
 score{
     margin:10px;
-    font-size:30px;
+    font-size:50px;
     z-index:9999;
 }
 #playagainbutton{
@@ -161,6 +161,7 @@ font-size:30px;
   }
   input 				{
     font-size:18px;
+    color:black;
     padding:10px 10px 10px 5px;
     display:block;
     width:300px;
@@ -242,4 +243,110 @@ font-size:30px;
   #back-arrow{
     display:none;
   }
+
+  input, select, textarea{
+    color:black!important;
+  }
+
+  level2{
+    position: fixed; /* or absolute */
+    font-size:80px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)!important;
+  }
+
+  .begin-screen{
+    width:100%;
+    height:100%;
+    display:block;
+  }
+
+.btn-menu{
+  position: relative; /* or absolute */
+  color:white;
+  width:350px;
+  height:70px;
+  font-size:25px;
+  text-align:center;
+  padding:10px;
+  background-color:transparent;
+  border:3px solid white;
+  color:white;
+  text-align:center;
+  cursor:pointer;
+  z-index:9999;
+  display:block;
+  top:-20px;
+  text-decoration: none!important;
+  transition: 1s all ease;
+}
+.btn-menu::before{
+  background:white;
+  content:"";
+  position:absolute;
+  left:0;
+  top:0;
+  z-index:-1;
+  transition: all 0.6s ease
+}
+
+.play::before{
+  width:0;
+  height:100%;
+}
+
+.play:hover::before{
+  width:100%;
+}
+.play:hover{
+  color:black;
+}
+
+.highscores-menu{
+  position:relative;
+  margin-top:20px!important;
+}
+
+.highscores-menu::before{
+  width:0;
+  height:100%;
+}
+
+.highscores-menu:hover::before{
+  width:100%;
+}
+.highscores-menu:hover{
+  color:black;
+}
+
+.instellingen{
+  position:relative;
+  margin-top:20px!important;
+}
+
+.instellingen::before{
+  width:0;
+  height:100%;
+}
+
+.instellingen:hover::before{
+  width:100%;
+}
+.instellingen:hover{
+  color:black;
+}
+
+#buttons-menu{
+  position: fixed; /* or absolute */
+  top: 60%;
+  left:200px;
+}
+
+#game_play{
+  display:none;
+}
+
+
 
